--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       doc.text("MULTISERVICIOS SG", 105, 20, { align: "center" });
       doc.setFontSize(10);
       doc.text("Servicios de Construcción, Remodelaciones y Mantenimiento", 105, 28, { align: "center" });
-      doc.text("Adaptados a las necesidades de cada cliente con garantía y responsabilidad", 105, 34, { align: "center" });
+      doc.text("Adaptados a las necesidades de cada cliente con garantía y responsabilidad.", 105, 34, { align: "center" });
       doc.line(20, 38, 190, 38);
 
       // Datos cliente
@@ -181,4 +181,5 @@
   </script>
 </body>
 </html>
+
 
