--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Generador de Cotización - Construcción</title>
+  <title>Generador de Cotización </title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
   <style>
@@ -174,11 +174,11 @@
       doc.text("Método de Pago:", 20, pieY);
       pieY += 6;
       doc.setFontSize(10);
-      doc.text("- Banco General (Ahorro 04-30-01-867548-0)", 20, pieY);
+      doc.text("- Banco General (Ahorro)", 20, pieY);
       pieY += 5;
-      doc.text("- Banistmo (Ahorro 119292598)", 20, pieY);
+      doc.text("- Banistmo (Ahorro)", 20, pieY);
       pieY += 5;
-      doc.text("- Yappy: 6504-4926", 20, pieY);
+      doc.text("- Yappy: 6748-8227", 20, pieY);
 
       pieY = pageHeight - 30;
       doc.setFontSize(10);
@@ -197,3 +197,4 @@
   </script>
 </body>
 </html>
+
