--- a/index.html
+++ b/index.html
@@ -119,9 +119,15 @@
       }
       doc.setTextColor(255, 255, 255);
       doc.setFontSize(18);
-      doc.text("MULTISERVICIOS SG", 105, 18, { align: "center" });
-      doc.setFontSize(10);
-      doc.text("Servicios de Construcción, Remodelaciones y Mantenimiento", 105, 28, { align: "center" });
+      doc.setFont(undefined, 'bold'); // 👈 Negrita
+      doc.text("MULTISERVICIOS SG", 105, 15, { align: "center" });
+
+      doc.setFontSize(13);
+      doc.setFont(undefined, 'normal');
+      doc.text("Cel: 6748-8227", 105, 23, { align: "center" });
+
+      doc.setFontSize(11);
+      doc.text("Servicios de Construcción, Remodelaciones y Mantenimiento", 105, 30, { align: "center" });
       doc.setTextColor(0, 0, 0);
 
       // Datos cliente
@@ -149,7 +155,7 @@
         productos.push([cantidad, desc, precio, total]);
       }
 
-      // Unir tabla productos + totales
+      // Subtotal y Total
       productos.push([
         { content: "Sub-Total", colSpan: 3, styles: { halign: "right" } },
         sumaTotal.toFixed(2)
@@ -171,32 +177,47 @@
           2: { halign: 'right', cellWidth: 40 },
           3: { halign: 'right', cellWidth: 35 }
         },
-        tableWidth: "90%", // <-- aquí el 90%
+        tableWidth: "90%",
         theme: 'grid'
       });
 
-      // Pie de página fijo
+      // Pie de página
       let pageHeight = doc.internal.pageSize.height;
-      let pieY = pageHeight - 50;
+      let pieY = pageHeight - 60;
 
       doc.setFontSize(11);
+      doc.setFont(undefined, 'bold');
       doc.text("Método de Pago:", 20, pieY);
-      pieY += 6;
+      doc.setFont(undefined, 'normal');
       doc.setFontSize(10);
+      pieY += 6;
+      doc.text("- EFRAIN GUILLERMO GUERRA PINEDA", 20, pieY);
+      pieY += 5;
       doc.text("- Banco General (Ahorro)", 20, pieY);
       pieY += 5;
-      doc.text("- Banistmo (Ahorro)", 20, pieY);
-      pieY += 5;
-      doc.text("- Yappy: 6748-8227", 20, pieY);
+      doc.text("- 0442986405610", 20, pieY);
 
-      pieY = pageHeight - 20;
+      let pieYRight = pageHeight - 60;
+      doc.setFontSize(11);
+      doc.setFont(undefined, 'bold');
+      doc.text("Otras Opciones de Pago:", 120, pieYRight);
+      doc.setFont(undefined, 'normal');
+      doc.setFontSize(10);
+      pieYRight += 6;
+      doc.text("- EFRAIN GUILLERMO GUERRA PINEDA", 120, pieYRight);
+      pieYRight += 5;
+      doc.text("- Banco General (Ahorro)", 120, pieYRight);
+      pieYRight += 5;
+      doc.text("- 0448000009515", 120, pieYRight);
+
+      // Mensaje final
+      let pieFinalY = pageHeight - 20;
       doc.setFontSize(10);
       doc.setTextColor(100);
-      doc.text("Gracias por preferirnos. Valoramos su confianza en nuestros servicios.", 105, pieY, { align: "center" });
-      pieY += 6;
-      doc.text("Tel: (507) 6748-8227 | Email: efraineguerra@gmail.com", 105, pieY, { align: "center" });
+      doc.text("Gracias por preferirnos. Valoramos su confianza en nuestros servicios.", 105, pieFinalY - 5, { align: "center" });
+      doc.text("Tel: (507) 6748-8227 | Email: efraineguerra@gmail.com", 105, pieFinalY, { align: "center" });
 
-      // Descargar o abrir
+      // Descargar PDF
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         let pdfBlobUrl = doc.output("bloburl");
         window.open(pdfBlobUrl, "_blank");
@@ -207,6 +228,7 @@
   </script>
 </body>
 </html>
+
 
 
 
