--- a/index.html
+++ b/index.html
@@ -2,51 +2,111 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Generador de Cotización </title>
+  <title>Generador de Cotización</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f3f6fa; margin: 0; padding: 20px; color: #333;
+      background: #f3f6fa;
+      margin: 0;
+      padding: 20px;
+      color: #333;
     }
-    h2 { text-align: center; color: #2c3e50; margin-bottom: 20px; }
+    h2 {
+      text-align: center;
+      color: #2c3e50;
+      margin-bottom: 20px;
+    }
     .formulario {
-      max-width: 900px; margin: auto; background: #fff;
-      padding: 25px; border-radius: 12px;
+      max-width: 900px;
+      margin: auto;
+      background: #fff;
+      padding: 25px;
+      border-radius: 12px;
       box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
     }
-    label { display: block; margin-top: 10px; font-weight: bold; }
-    input, textarea {
-      width: 100%; padding: 8px; margin-top: 5px;
-      border: 1px solid #ccc; border-radius: 8px; font-size: 14px;
+    label {
+      display: block;
+      margin-top: 10px;
+      font-weight: bold;
     }
-    textarea { resize: vertical; }
+    input, textarea {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 14px;
+    }
+    textarea {
+      resize: vertical;
+    }
     table {
-      width: 100%; border-collapse: collapse; margin-top: 15px;
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 15px;
       border: 2px solid #0b437a;
     }
     th, td {
       border: 1px solid #0b437a;
-      padding: 10px; text-align: center; vertical-align: middle;
+      padding: 10px;
+      text-align: center;
+      vertical-align: middle;
     }
-    th { background: #2c3e50; color: white; }
-    td { background: #fafafa; }
-    .btn { margin-top: 15px; padding: 10px 20px;
-      border: none; border-radius: 8px; cursor: pointer; font-size: 14px; font-weight: bold;
-      transition: 0.3s; }
-    .btn-add { background: #27ae60; color: white; }
-    .btn-add:hover { background: #219150; }
-    .btn-download { background: #2980b9; color: white; float: right; }
-    .btn-download:hover { background: #21618c; }
-    .btn-delete { background: #e74c3c; color: white; border: none;
-      border-radius: 6px; padding: 5px 8px; cursor: pointer; }
-    .btn-delete:hover { background: #c0392b; }
-    #logoPreview { margin: 10px auto; display: block; max-width: 150px; max-height: 80px; }
+    th {
+      background: #2c3e50;
+      color: white;
+    }
+    td {
+      background: #fafafa;
+    }
+    .btn {
+      margin-top: 15px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .btn-add {
+      background: #27ae60;
+      color: white;
+    }
+    .btn-add:hover {
+      background: #219150;
+    }
+    .btn-download {
+      background: #2980b9;
+      color: white;
+      float: right;
+    }
+    .btn-download:hover {
+      background: #21618c;
+    }
+    .btn-delete {
+      background: #e74c3c;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 5px 8px;
+      cursor: pointer;
+    }
+    .btn-delete:hover {
+      background: #c0392b;
+    }
+    #logoPreview {
+      margin: 10px auto;
+      display: block;
+      max-width: 150px;
+      max-height: 80px;
+    }
   </style>
 </head>
 <body>
-  <h2>Generador de Cotización </h2>
+  <h2>Generador de Cotización</h2>
   <div class="formulario">
     <label>Cliente: <input type="text" id="cliente"></label>
     <label>Fecha: <input type="date" id="fecha"></label>
@@ -65,6 +125,11 @@
       </tr>
     </table>
     <button class="btn btn-add" onclick="agregarFila()">➕ Añadir Producto</button>
+
+    <label style="margin-top: 20px;">Observación:
+      <textarea id="observacion" rows="4" placeholder="Escriba aquí cualquier observación adicional..."></textarea>
+    </label>
+
     <button class="btn btn-download" onclick="generarPDF()">💾 Descargar PDF</button>
     <div style="clear:both;"></div>
   </div>
@@ -74,7 +139,7 @@
 
     document.getElementById("logo").addEventListener("change", function() {
       const file = this.files[0];
-      if(file) {
+      if (file) {
         const reader = new FileReader();
         reader.onload = function(e) {
           logoBase64 = e.target.result;
@@ -111,15 +176,23 @@
       const { jsPDF } = window.jspdf;
       let doc = new jsPDF("p", "mm", "a4");
 
-      // Encabezado con logo
+      // Encabezado
       doc.setFillColor(41, 128, 185);
       doc.rect(0, 0, 210, 40, "F");
+
+      // Logo
       if (logoBase64) {
         doc.addImage(logoBase64, "PNG", 160, 8, 35, 25);
       }
+      // Marco del logo
+      doc.setDrawColor(255, 255, 255); // blanco para resaltar sobre el fondo azul
+      doc.setLineWidth(0.5);
+      doc.rect(160, 8, 35, 25);
+
+      // Título
       doc.setTextColor(255, 255, 255);
       doc.setFontSize(18);
-      doc.setFont(undefined, 'bold'); // 👈 Negrita
+      doc.setFont(undefined, 'bold');
       doc.text("MULTISERVICIOS SG", 105, 15, { align: "center" });
 
       doc.setFontSize(13);
@@ -155,7 +228,6 @@
         productos.push([cantidad, desc, precio, total]);
       }
 
-      // Subtotal y Total
       productos.push([
         { content: "Sub-Total", colSpan: 3, styles: { halign: "right" } },
         sumaTotal.toFixed(2)
@@ -169,21 +241,40 @@
         head: [['Cantidad', 'Descripción', 'Precio Unitario (B/.)', 'Total (B/.)']],
         body: productos,
         startY: 75,
+        margin: { left: 20, right: 20 },
         styles: { lineWidth: 0.3, lineColor: [0,0,0] },
         headStyles: { fillColor: [44,62,80], textColor: 255 },
         columnStyles: {
           0: { halign: 'center', cellWidth: 25 },
-          1: { halign: 'left', cellWidth: 90 },
-          2: { halign: 'right', cellWidth: 40 },
-          3: { halign: 'right', cellWidth: 35 }
+          1: { halign: 'left', cellWidth: 80 },
+          2: { halign: 'right', cellWidth: 35 },
+          3: { halign: 'right', cellWidth: 30 }
         },
-        tableWidth: "90%",
+        tableWidth: 'auto',
         theme: 'grid'
       });
 
+      // Observación
+      let observacion = document.getElementById("observacion").value.trim();
+      if (observacion) {
+        let y = doc.lastAutoTable.finalY + 80;
+        doc.setFontSize(12);
+        doc.setFont(undefined, 'bold');
+        doc.text("Observación:", 20, y);
+        y += 5;
+        let textLines = doc.splitTextToSize(observacion, 170);
+        let boxHeight = textLines.length * 6 + 10;
+
+        doc.setDrawColor(44, 62, 80);
+        doc.rect(20, y, 170, boxHeight);
+        doc.setFontSize(11);
+        doc.setFont(undefined, 'normal');
+        doc.text(textLines, 25, y + 8);
+      }
+
       // Pie de página
       let pageHeight = doc.internal.pageSize.height;
-      let pieY = pageHeight - 60;
+      let pieY = pageHeight - 55;
 
       doc.setFontSize(11);
       doc.setFont(undefined, 'bold');
@@ -197,7 +288,7 @@
       pieY += 5;
       doc.text("- 0442986405610", 20, pieY);
 
-      let pieYRight = pageHeight - 60;
+      let pieYRight = pageHeight - 55;
       doc.setFontSize(11);
       doc.setFont(undefined, 'bold');
       doc.text("Otras Opciones de Pago:", 120, pieYRight);
@@ -210,14 +301,13 @@
       pieYRight += 5;
       doc.text("- 0448000009515", 120, pieYRight);
 
-      // Mensaje final
       let pieFinalY = pageHeight - 20;
       doc.setFontSize(10);
       doc.setTextColor(100);
       doc.text("Gracias por preferirnos. Valoramos su confianza en nuestros servicios.", 105, pieFinalY - 5, { align: "center" });
       doc.text("Tel: (507) 6748-8227 | Email: efraineguerra@gmail.com", 105, pieFinalY, { align: "center" });
 
-      // Descargar PDF
+      // Descargar / abrir PDF
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         let pdfBlobUrl = doc.output("bloburl");
         window.open(pdfBlobUrl, "_blank");
@@ -228,6 +318,7 @@
   </script>
 </body>
 </html>
+
 
 
 
